feat: implementing the weather card component

--- a/weather-app/src/app/modules/weather/page/weather-home/weather-home.component.html
+++ b/weather-app/src/app/modules/weather/page/weather-home/weather-home.component.html
@@ -18,3 +18,5 @@
     </span>
   </form>
 </div>
+
+<app-weather-card *ngIf="weatherInterface" [weatherInterfaceInput]="weatherInterface"></app-weather-card>
