docs: add readme file

--- a/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
+++ b/weather-app/src/app/modules/weather/components/weather-card/weather-card.component.html
@@ -1,14 +1,14 @@
 <div class="container" *ngIf="weatherInterfaceInput">
   <div class="upper-data">
-    <img src="../../../../../assets/sun.jpg" alt=""
+    <img src="https://github.com/romulodeoliveira/WeatherApp/blob/main/weather-app/src/assets/sun.jpg?raw=true" alt=""
       *ngIf="weatherInterfaceInput.main.temp > 15"
     />
 
-    <img src="../../../../../assets/cold1.jpg" alt=""
+    <img src="https://github.com/romulodeoliveira/WeatherApp/blob/main/weather-app/src/assets/cold1.jpg?raw=true" alt=""
       *ngIf="weatherInterfaceInput.main.temp <= 15"
     />
 
-    <img src="../../../../../assets/cold2.jpg" alt=""
+    <img src="https://github.com/romulodeoliveira/WeatherApp/blob/main/weather-app/src/assets/cold2.jpg?raw=true" alt=""
       *ngIf="weatherInterfaceInput.main.temp <= 0"
     />
 
